# examen-24308060610066

./: README.md  gestor.py  main.py  pyproject.toml
templates/: base.html  ges_t.html  gestordetarea.html  inicioseccion.html  registro.html  verificar.html
