[project]
name = "examen-24308060610066"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker>=1.9.0",
    "charset-normalizer>=3.4.7",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "pymongo>=4.17.0",
]
